
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int arrow () ;
 int assign () ;
 int bitfield_basic () ;
 int bitfield_initializer () ;
 int bitfield_mix () ;
 int bitfield_union () ;
 int bitfield_unnamed () ;
 int empty_struct () ;
 int flexible_member () ;
 int incomplete () ;
 int print (char*) ;
 int t1 () ;
 int t10 () ;
 int t11 () ;
 int t12 () ;
 int t13 () ;
 int t14 () ;
 int t2 () ;
 int t3 () ;
 int t4 () ;
 int t5 () ;
 int t6 () ;
 int t7 () ;
 int t8 () ;
 int t9 () ;
 int test_offsetof () ;
 int unnamed () ;

void testmain() {
    print("struct");
    t1();
    t2();
    t3();
    t4();
    t5();
    t6();
    t7();
    t8();
    t9();
    t10();
    t11();
    t12();
    t13();
    t14();
    unnamed();
    assign();
    arrow();
    incomplete();
    bitfield_basic();
    bitfield_mix();
    bitfield_union();
    bitfield_unnamed();
    bitfield_initializer();
    test_offsetof();
    flexible_member();
    empty_struct();
}
